--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <style>
-      body {margin: 0;}
+        * {
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+          font-family: 'Roboto', sans-serif;
+        }
     </style>
   </head>
   <body>
